# ecom-analytics-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: detect_encoding.py  ingest_data.py
src/ecommerce_analytics_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
