[project]
name = "ecommerce-analytics-pipeline"
version = "0.1.0"
description = "ETL pipeline using Google BigQuery, Airflow, and dbt"
authors = [{ name = "Eric Schmidt" }]
dependencies = [
    "apache-airflow==2.5.0",
    "apache-airflow-providers-google",
    "dbt-bigquery",
    "google-cloud-bigquery",
    "google-auth",
    "pandas",
    "pyarrow"
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"